--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: 0;
     text-decoration: none;
+    font-family: 'Inter';
+    font-weight: 700;
 }
 
 body{
