--- a/css/design.css
+++ b/css/design.css
@@ -11,7 +11,6 @@ section.design .superior{
     margin-bottom: 50px;
     display: flex;
     flex-direction: column;
-    transition-duration: 0.2s;
 }
 
 hr{
@@ -24,7 +23,7 @@ section.design .titulo{
     color: #030140;
     text-align: center;
     font-size: 46px;
-    font-weight: bold;
+    font-weight: 700;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -49,23 +48,25 @@ section.design .icone img{
     height: 77px;
 }
 
-section.design h1, section.design h2{
+section.design .icone h1, section.design .icone h2{
     text-align: center;
     flex: 1;
     margin-bottom: 20px;
 }
 
-section.design h1{
+section.design .icone h1{
     line-height: 30px;
     font-size: 24px;
-    font-weight: 200;
+    font-family: 'Poppins';
+    font-weight: 300;
     color: #030140;
     margin-top: 24px;
 }
 
-section.design h2{
+section.design .icone h2{
     font-size: 16px;
-    font-weight: 100;
+    font-family: "Montserrat";
+    font-weight: 400;
     color: #373f41;
 }
 
