--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 *{
     margin: 0;
@@ -8,8 +8,8 @@
     box-sizing: border-box;
     list-style: 0;
     text-decoration: none;
-    font-family: 'Inter';
-    font-weight: 700;
+    font-family: 'Poppins';
+    font-weight: 400;
 }
 
 body{
