--- a/css/design.css
+++ b/css/design.css
@@ -79,15 +79,54 @@ section.design .inferior{
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+section.design .inferior-titulo{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 48px;
+    font-weight: 700;
+    color: #fff;
+}
+
+section.design .inferior-titulo img{
+    height: 42px;
 }
 
 section.design .inferior .lista-logo{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    width: calc(100% - 40px);
+    padding: 0 20px;
+}
+
+section.design .inferior .logo{
+    margin: 10px 10px 30px 10px;
+    width: calc( 25% - 8 * 10px );
+    min-width: 230px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
 }
 
 section.design .inferior .logo img{
-    margin: 60px;
-    width: 200px;
-    margin: auto 0;
+    max-width: 80%;
+    max-height: 120px;
+}
+
+section.design #design-logo-05{
+    width: 120px;
+}
+
+section.design #design-logo-08{
+    width: 160px;
+}
+
+section.design .inferior-rodape{
+    color: #fff;
+    font-weight: 500;
+    font-size: 28px;
+    margin-bottom: 95px;
 }
